welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not a legal formal parameter
	if (( Math.abs(a-b) == 10 || Math.abs(c-b) == 10 || Math.abs(a-c) == 10 ) || ( Math.abs(a-b) => 10 || Math.abs(c-b) => 10 || Math.abs(a-c) => 10 ))   return true 
                                                                                               ^lessBy10:2: error: not a legal formal parameter
	if (( Math.abs(a-b) == 10 || Math.abs(c-b) == 10 || Math.abs(a-c) == 10 ) || ( Math.abs(a-b) => 10 || Math.abs(c-b) => 10 || Math.abs(a-c) => 10 ))   return true 
                                                                                                           ^lessBy10:2: error: not a legal formal parameter
	if (( Math.abs(a-b) == 10 || Math.abs(c-b) == 10 || Math.abs(a-c) == 10 ) || ( Math.abs(a-b) => 10 || Math.abs(c-b) => 10 || Math.abs(a-c) => 10 ))   return true 
                                                                                                                                  ^